# alloc-context

./: .bandit.yaml  .coverage  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  server.json
.cursor/: mcp.json
.github/workflows/: ci.yml  publish-mcp-registry.yml  release-pr.yml  release.yml
alloccontext/: __init__.py  __main__.py  config.py  constants.py  user_config.py  x402_production_check.py
alloccontext/brief/: runner.py
alloccontext/deliver/: __init__.py  alerts.py  email.py
alloccontext/ingest/: alt_quote_registry.py  alt_quote_store.py  alt_quotes.py  asset_registry.py  coinbase_client.py  coinbase_portfolio.py  coingecko.py  coinmarketcap.py  etf_flows.py  exchange_http.py  fear_greed.py  fred.py  kalshi.py  kalshi_api.py  kraken_client.py  kraken_portfolio.py  macro_calendar.py  macro_normalize.py  market_snapshots.py  onchain_cycle.py  parse_helpers.py  portfolio_holdings.py  quote_resolver.py  runner.py
alloccontext/integrations/: langchain.py
alloccontext/mcp/: assets.py  bazaar.py  bridge.py  (+17 more)
config/: config.dev.yaml  config.docker.yaml  config.example.yaml  user.example.yaml
deploy/: backup_sqlite.py  remote-install.sh  render-systemd-timers.py  restore-sqlite.sh  rsync-to-vps.sh  run-vps-smoke.sh  shared.env.example  vps-layout.md  vps-setup.md
docker/: .env.example  Dockerfile  _common.sh  compose.yml  config.yaml  down.sh  run.sh  up.sh
docs/: USE.md  agent-integration.md  agent-onramp.md  architecture.md  context-bundle.md  cursor-mcp-bridge.example.json  cursor-mcp.example.json  cursor-mcp.md  data-sources.md  deterministic-context-mcp-pattern.md  distribution.md  docker-self-host.md  examples.md  langchain-integration.md  local-dev.md  mcp-discovery.md  mcp-http.md  mcp-roadmap.md  mcp.md  migration.md  onchain-cycle.md  publishing.md  security-ci.md  self-hosting.md  user-config.md
schemas/: context-bundle.v1.json  context-bundle.v2.json
scripts/: bump_version.py  check_pypi_release_json.py  local-down.sh  local-up.sh  publish-mcp-registry.sh  wait-for-pypi.sh  x402-paid-smoke-test.py  x402-reindex-burst.py
tests/: conftest.py  test_adr005_ingest.py  test_allocation_advice.py  test_bridge.py  test_bridge_portfolio.py  test_brief.py  test_bump_version.py  test_check_pypi_release_json.py  test_coinbase_portfolio.py  test_context_bundle_schema.py  test_context_snapshots.py  test_db_schema.py  test_deploy.py  test_expectation_review.py  test_expectation_review_tool.py  test_fear_greed.py  test_glama_well_known.py  test_holdings_scoped_delta_regime.py  test_holdings_scoped_market.py  test_horizon.py  test_ingest_runner.py  test_kraken_portfolio.py  test_langchain_integration.py  test_live_ingest_handlers.py  test_macro.py  test_mcp_assets_regime.py  test_mcp_bazaar.py  test_mcp_contracts.py  test_mcp_handlers.py  test_mcp_http_lifecycle.py  test_mcp_live_portfolio.py  test_mcp_server.py  test_mcp_validation.py  test_mcp_x402.py  test_onchain_cycle.py  test_payer.py  test_portfolio_holdings.py  test_predictions.py  test_qa_ingest_store.py  test_quality_loop.py  (+19 more)
(+41 files in other folders)
