[project]
name = "alloc-context"
version = "0.1.0"
description = "AllocContext — BTC/ETH allocation context, drift, and rebalance facts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
alloc-context = "alloccontext.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alloccontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
