[project]
name = "alloc-context"
version = "0.2.12"
description = "Portfolio-aware crypto context — CEX or wallet holdings, holdings-scoped market, optional allocation analysis"
readme = "README.md"
license = { text = "Elastic-2.0" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "x402",
    "holdings",
    "portfolio",
    "crypto",
    "cryptocurrency",
    "bitcoin",
    "ethereum",
    "agents",
    "allocation",
    "rebalance",
    "coinbase",
    "kraken",
    "wallet",
    "defi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "PyJWT>=2.8",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://mcp.alloc-context.com/llms.txt"
Documentation = "https://github.com/AllocContext/alloc-context/blob/main/docs/agent-integration.md"
Repository = "https://github.com/AllocContext/alloc-context"
Issues = "https://github.com/AllocContext/alloc-context/issues"
Changelog = "https://github.com/AllocContext/alloc-context/releases"
"MCP Server" = "https://mcp.alloc-context.com/mcp"

[project.optional-dependencies]
mcp = [
    "mcp>=1.6",
]
hosted = [
    "mcp>=1.6",
    "x402[fastapi,evm]>=2.0",
    "cdp-sdk>=1.46",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "bandit>=1.8",
    "pip-audit>=2.9",
    "mcp>=1.6",
    "x402[fastapi,evm]>=2.0",
    "cdp-sdk>=1.46",
    "uvicorn[standard]>=0.30",
    "langchain-core>=0.3.0",
]

[project.scripts]
alloc-context = "alloccontext.__main__:main"
alloc-context-mcp = "alloccontext.mcp.server:main"
alloc-context-mcp-http = "alloccontext.mcp.http:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alloccontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["alloccontext"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
